--- a/index.html
+++ b/index.html
@@ -370,21 +370,20 @@
                 </ul>
             </div>
             <!-- forma footer -->
-            <div>
+            <div class="ff-box">
+                <p class="footform-txt">Subscribe</p>
                 <form class="form-footer" name="subscribe_form" autocomplete="off" novalidate>
-                    <p class="footform-txt">Subscribe</p>
-                    <div class="foot-input-box">
-                        <input class="form-footer-input" type="email" name="subschribe_email" placeholder="E-mail">
 
-                        <button class="footform-btn" type="submit">Subscribe<svg class="footform-btn-icon" width="24"
-                                height="24">
-                                <use href="./images/icons.svg#icon-Frame-3"></use>
-                            </svg></button>
-                    </div>
+                    <label for="" class="">
+                        <input class="form-footer-input" type="email" name="subschribe-email" placeholder="E-mail">
+                    </label>
+                    <button class="footform-btn" type="submit">Subscribe
+                        <svg class="footform-btn-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Frame-3"></use>
+                        </svg></button>
                 </form>
             </div>
         </div>
-
     </footer>
 
     <!-- Modal-window -->
@@ -399,11 +398,10 @@
             <p class="form-txt">Leave your contacts and we will call you back</p>
             <form class="form" name="issue_report_form" autocomplete="off">
                 <div class="form-element">
-
-                    <label class="form-label" for="user-text">Name</label>
+                    <label class="form-label" for="user-name">Name</label>
                     <div class="input-wrap">
-                        <input class="form-input" required type="text" id="user-text" name="user-text" placeholder="" />
-                        <svg width="18" height="24">
+                        <input class="form-input" required type="text" id="user-name" name="user-name" placeholder="" />
+                        <svg class="form-input-svg" width="18" height="24">
                             <use href="./images/icons.svg#icon-person-black-18dp-1">
                             </use>
                         </svg>
@@ -412,10 +410,9 @@
 
                 <div class="form-element">
                     <label for="user-tel" class="form-label">Phone</label>
-
                     <div class="input-wrap">
                         <input class="form-input" type="tel" id="user-tel" name="user-tel" placeholder="" />
-                        <svg width="18" height="24">
+                        <svg class="form-input-svg" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone-black-18dp-1">
                             </use>
                         </svg>
@@ -424,10 +421,9 @@
 
                 <div class="form-element">
                     <label for="user-email" class="form-label">Email</label>
-
                     <div class="input-wrap">
                         <input class="form-input" type="email" id="user-email" name="user-email" placeholder="" />
-                        <svg width="18" height="24">
+                        <svg class="form-input-svg" width="18" height="24">
                             <use href="./images/icons.svg#icon-email-black-18dp-1">
                             </use>
                         </svg>
@@ -442,10 +438,11 @@
                             placeholder="Text input"></textarea>
                     </div>
                 </div>
+
                 <div class="form-checkbox">
-                    <input class="policy-input visually-hidden" type="checkbox" name="user-agreement"
-                        id="user-agreement" value="true" />
-                    <label class="policy-txt" for="user-agreement">
+                    <input class="policy-input visually-hidden" type="checkbox" name="user-agreement" id="user-privacy"
+                        value="true" />
+                    <label class="policy-txt" for="user-privacy">
                         <span class="checkbox-icon">
                             <svg class="checkbox-icon-svg" width="10" height="8">
                                 <use href="./images/icons.svg#icon-Vector">
