--- a/portfolio.html
+++ b/portfolio.html
@@ -301,8 +301,21 @@
                     </li>
                 </ul>
             </div>
-        </div>
+            <!-- forma footer -->
+            <div class="ff-box">
+                <p class="footform-txt">Subscribe</p>
+                <form class="form-footer" name="subscribe_form" autocomplete="off" novalidate>
 
+                    <label for="" class="">
+                        <input class="form-footer-input" type="email" name="subschribe-email" placeholder="E-mail">
+                    </label>
+                    <button class="footform-btn" type="submit">Subscribe
+                        <svg class="footform-btn-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Frame-3"></use>
+                        </svg></button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 
