--- a/portfolio.html
+++ b/portfolio.html
@@ -262,7 +262,6 @@
 
 
     </main>
-
     <!--footer-->
     <footer class="footbox ">
         <div class="container footcontainer ">
@@ -304,10 +303,10 @@
             <!-- forma footer -->
             <div class="ff-box">
                 <p class="footform-txt">Subscribe</p>
-                <form class="form-footer" name="subscribe_form" autocomplete="off" novalidate>
+                <form class="form-footer" name="subscribe-form" autocomplete="off" novalidate>
 
-                    <label for="" class="">
-                        <input class="form-footer-input" type="email" name="subschribe-email" placeholder="E-mail">
+                    <label for="user-subschribe-email" class="form-footer-label"><input class="form-footer-input"
+                            type="email" id="user-subschribe-email" name="subschribe-email" placeholder="E-mail">
                     </label>
                     <button class="footform-btn" type="submit">Subscribe
                         <svg class="footform-btn-icon" width="24" height="24">
