--- a/index.html
+++ b/index.html
@@ -431,13 +431,13 @@
                 </div>
 
 
-                <label for="user-comment" class="form-label">Comment</label>
+                <div class="form-texterea">
+                    <label for="user-comment" class="form-label">Comment</label>
 
-                <div>
+
                     <textarea class="form-textarea-input" name="user-comment" id="user-comment" rows="5"
                         placeholder="Text input"></textarea>
                 </div>
-
 
                 <div class="form-checkbox">
                     <input class="policy-input visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
